application/nebula-graph/nebula-graphd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nebula-graphd
  namespace: nebula-graph
spec:
  selector:
    matchLabels:
      app: nebula-graphd
  replicas: 3
  template:
    metadata:
      labels:
        app: nebula-graphd
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                  - node78
                  - node79
                  - node80
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - nebula-graphd
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nebula-graphd
        image: vesoft/nebula-graphd:nightly
        args:
        - --meta_server_addrs=192.168.2.78:45500,192.168.2.79:45500,192.168.2.80:45500
        - --ws_ip=0.0.0.0
        - --port=3699
        - --log_dir=/logs
        - --v=0
        - --minloglevel=0
        ports:
        - name: graphd
          containerPort: 3699
          hostPort: 3699
        volumeMounts:
        - name: nebula-graphd-logs
          mountPath: /logs
      volumes:
      - name: nebula-graphd-logs
        hostPath:
          path: /data/k8s-pv/nebula-graph/graphd/logs
