application/nebula-graph/nebula-graph.yaml
apiVersion: v1
kind: Service
metadata:
  name: nebula-graph
  namespace: svr-app
  labels:
    app: nebula-graph
spec:
  clusterIP: None
  selector:
    app: nebula-graph
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nebula-graph
  namespace: svr-app
spec:
  selector:
    matchLabels:
      app: nebula-graph
  serviceName: nebula-graph
  replicas: 3
  podManagementPolicy: Parallel # 并行启动和关闭
  template:
    metadata:
      labels:
        app: nebula-graph
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                  - node78
                  - node79
                  - node80
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - nebula-graph
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nebula-metad
        image: vesoft/nebula-metad:v1.1.0
        args:
        - --meta_server_addrs=nebula-graph-0.nebula-graph.svr-app.svc.cluster.local:45500,nebula-graph-1.nebula-graph.svr-app.svc.cluster.local:45500,nebula-graph-2.nebula-graph.svr-app.svc.cluster.local:45500
        - --local_ip=0.0.0.0
        - --ws_ip=0.0.0.0
        - --port=45500
        - --data_path=/data
        - --log_dir=/logs
        - --v=0
        - --minloglevel=0
        livenessProbe:
          httpGet:
            path: /status
            port: 11000
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: nebula-metad-data
          mountPath: /data
        - name: nebula-metad-logs
          mountPath: /logs
      - name: nebula-storaged
        image: vesoft/nebula-storaged:v1.1.0
        args:
        - --meta_server_addrs=nebula-graph-0.nebula-graph.svr-app.svc.cluster.local:45500,nebula-graph-1.nebula-graph.svr-app.svc.cluster.local:45500,nebula-graph-2.nebula-graph.svr-app.svc.cluster.local:45500
        - --local_ip=0.0.0.0
        - --ws_ip=0.0.0.0
        - --port=44500
        - --data_path=/data
        - --log_dir=/logs
        - --v=0
        - --minloglevel=0
        livenessProbe:
          httpGet:
            path: /status
            port: 12000
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: nebula-storaged-data
          mountPath: /data
        - name: nebula-storaged-logs
          mountPath: /logs
      - name: nebula-graphd
        image: vesoft/nebula-graphd:v1.1.0
        args:
        - --meta_server_addrs=nebula-graph-0.nebula-graph.svr-app.svc.cluster.local:45500,nebula-graph-1.nebula-graph.svr-app.svc.cluster.local:45500,nebula-graph-2.nebula-graph.svr-app.svc.cluster.local:45500
        - --ws_ip=0.0.0.0
        - --port=3699
        - --log_dir=/logs
        - --v=0
        - --minloglevel=0
        ports:
        - name: graphd
          containerPort: 3699
          hostPort: 3699
        livenessProbe:
          httpGet:
            path: /status
            port: 13000
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: nebula-graphd-logs
          mountPath: /logs
      volumes:
      - name: nebula-metad-data
        hostPath:
          path: /data/k8s-pv/nebula-graph/metad/data
      - name: nebula-metad-logs
        hostPath:
          path: /data/k8s-pv/nebula-graph/metad/logs
      - name: nebula-storaged-data
        hostPath:
          path: /data/k8s-pv/nebula-graph/storaged/data
      - name: nebula-storaged-logs
        hostPath:
          path: /data/k8s-pv/nebula-graph/storaged/logs
      - name: nebula-graphd-logs
        hostPath:
          path: /data/k8s-pv/nebula-graph/graphd/logs
